deployment/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  annotations:
    linkerd.io/inject: enabled
